# crypto-accounts-bot

./: .env  .env.example  .gitignore  README.md  pyproject.toml
configs/: constants.py  individual_data.py
data/: 2930067_20240301bdbcdad16dc576e2650a5e2faba5f21a5d2c13ef6059d46e4d6a5190d3bb57.txt  2930077_202403b52832c6747e444b138b8e658783a037afaa5ec458f08929ec3ce109c99b8d52.txt  aws_data.json
helpers/: aws_registered_users.json  element_handler.py  file_handler.py  phone_identifier.py  randomizer.py  recaptcha_solver.py  temp_mail.py
src/: __main__.py  async_simhandler.py  aws_scrapper.py  config.py  imap_handler.py  online_sim.py  onlinesim_data.json  recaptcha_solver.py
src/configs/: constants.py
src/data/: aws_data.json  current_sim.json
src/helpers/: custom_exceptions.py  element_handler.py  file_handler.py  phone_identifier.py  randomizer.py  recaptcha_solver.py  temp_mail.py
src/logs/: aws_logger.py  logging.yaml
src/repository/: abc_sim_repository.py  abstract_repository.py  file_repository.py
src/utils/: custom_exceptions.py  element_handler.py  file_handler.py  phone_identifier.py  randomizer.py  recaptcha_solver.py  temp_mail.py
tests/: test_multiple_registration.py  usecases.py
