[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["egorverkhozin <egorverkhozin@dot-agency.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.3.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.1"
pyyaml = "^6.0.1"
lxml = "^5.1.0"
openpyxl = "^3.1.2"
selenium = "^4.18.1"
temp-mail = "^0.2"
temporary-mail = "^1.6"
tempmail-python = "^2.3.3"
undetected-chromedriver = "^3.5.5"
twilio = "^9.0.2"
imap-tools = "^1.5.0"
redbox = "^0.2.1"
phonenumbers = "^8.13.32"
python-dotenv = "^1.0.1"
2captcha-python = "^1.2.2"
pydantic-settings = "^2.2.1"
names = "^0.3.0"
credit-card-info-generator = "^1.0"
random-address = "^1.1.1"
faker = "^24.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"
indent-width = 4
show-fixes = true

[tool.ruff.lint]
fixable = ["ALL"]
select = [
    "E",
    "F",
    "UP",
    "I",
    "ANN",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-line-length = "dynamic"